[package]
name = "notli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
colored = "2.0.0"
log = "0.4.14"
project-root = "0.2.2"
pulldown-cmark = "0.9.1"
regex = "1.5.4"
simple_logger = "2.1.0"
